//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique, not null]
  password String [not null]
  firstname String
  lastname String
  posts Post [not null]
  role Role [not null]
  bills Bill [not null]
  invoices Invoice [not null]
}

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null]
  title String [not null]
  content String
  author User
  authorId String
}

Table Bill {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  amount Int [not null]
  dueDate DateTime [not null]
  details String
  user User
  userId String
}

Table Invoice {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  amount Int [not null]
  dueDate DateTime [not null]
  details String
  user User
  userId String
}

Enum Role {
  ADMIN
  USER
}

Ref: Post.authorId > User.id

Ref: Bill.userId > User.id

Ref: Invoice.userId > User.id